NJ - 14/11/04 - Added new lines to ircbpconfig.py
NJ - 14/11/04 - Added checking for 'join-blocking' numerics
NJ - 14/11/04 - Made handling for 'join-blocking' numerics check if that was the last channel, if so it will quit cleaning fixing bug #2781 (Bot doesn't phase RAW messages)
NJ - 14/11/04 - Added the DancerIRCd 'join-blocking' numerics
NJ - 14/11/04 - Fixed some of the tabbing
NJ - 14/11/04 - Fix a TINY bug... (I added a '.' after a function and python didn't like it.
NJ - 14/11/04 - Made the bot rejoin when kicked.
NJ - 14/11/04 - Updated mktxt.sh (so it will make README.txt
NJ - 14/11/04 - Got rid of the .txt files as we can just mktxt them for releases (e.g. Windows users that are able to download source from SVN should be able to read these files via open with)
NJ - 14/11/04 - RELEASE - 0.1.1
NJ - 14/11/04 - Tag to /framework/tags/REL-0.1.1
NJ - 15/11/04 - Started implementing SQL to the bot.
NJ - 15/11/04 - Worked out a config table system
NJ - 15/11/04 - Implemented all the DB calls but have not yet got a NSPASSWD coloum in yet...
NJ - 16/11/04 - Add mysql table create file...
NJ - 16/11/04 - Somehow an IF statement got replaced with "hey" so it wouldn't work :(
NJ - 16/11/04 - After advise all the tabs have being removed
NJ - 05/12/04 - Updating the newline handling in the buffer thanks to bdash in #newzealand on freenode ;)
NJ - 05/12/04 - Finished updating the newline handling (it works perfectly) once again, THANK YOU BDASH!
NJ - 05/12/04 - Fix up !kick syntax error.
NJ - 06/12/04 - Added NSPASSWORD to SQL
NJ - 06/12/04 - Made a small optimization in ircbpconfig.py to incorporate the DB handling to end result into 1 line (instead of two) and only two varibles, looking for more to be made currently.
NJ - 06/12/04 - Remade create_config.sql (this time from phpMyAdmin).  Now also drops existing table (if any) so PLEASE watch out!
NJ - 06/12/04 - Limited SQL query to one result which should prevent problems.