@@ -1,4 +1,21 @@
 -- 
+-- Table structure for table `channels`
+-- 
+
+DROP TABLE IF EXISTS `channels`;
+CREATE TABLE IF NOT EXISTS `channels` (
+  `channel` varchar(30) NOT NULL default ''
+) TYPE=MyISAM;
+
+-- 
+-- Dumping data for table `channels`
+-- 
+
+INSERT INTO `channels` VALUES ('#channel');
+
+-- --------------------------------------------------------
+
+-- 
 -- Table structure for table `config`
 -- 
 
@@ -18,3 +35,20 @@ CREATE TABLE IF NOT EXISTS `config` (
 -- 
 
 INSERT INTO `config` VALUES ('IRCBP', 'The Internet Relay Chat Bot Project', '', 'irc.freenode.net', 6667, '', 0x31);
+
+-- --------------------------------------------------------
+
+-- 
+-- Table structure for table `users`
+-- 
+
+DROP TABLE IF EXISTS `users`;
+CREATE TABLE IF NOT EXISTS `users` (
+  `mask` text NOT NULL
+) TYPE=MyISAM;
+
+-- 
+-- Dumping data for table `users`
+-- 
+
+INSERT INTO `users` VALUES ('*!*@*');
